--- a/loadmodel.ipynb
+++ b/loadmodel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,13 +95,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0 [[0.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "0 [[0.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "0 [[4.46855e-35]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
+      "1 [[1.]]\n",
       "1 [[1.]]\n",
       "1 [[1.]]\n",
       "1 [[1.]]\n",
@@ -113,21 +199,19 @@
     }
    ],
    "source": [
-    "frequency = 2500\n",
-    "duration = 5000  \n",
+    "frequency = 2200\n",
+    "duration = 2000  \n",
     "# winsound.Beep(frequency, duration)\n",
-    "cap = cv2.VideoCapture(\"test/video/ariz.mp4\")\n",
+    "cap = cv2.VideoCapture(\"test/video/faizan_undrowsiness.mp4\")\n",
     "label = \"Testing\"\n",
     "TRACKER = []\n",
-    "count = 0\n",
     "size = 150\n",
-    "count = 0\n",
     "labels = [\"drowsiness\" , \"undrowsiness\"]\n",
     "face_cascade = cv2.CascadeClassifier(\"haarcascade/haarcascade_frontalface_alt.xml\")\n",
     "while(True):\n",
     "    # Capture frame-by-frame\n",
     "    ret, frame = cap.read()\n",
-    "#     frame = cv2.rotate(frame, cv2.cv2.ROTATE_90_COUNTERCLOCKWISE)\n",
+    "    frame = cv2.rotate(frame, cv2.cv2.ROTATE_90_COUNTERCLOCKWISE)\n",
     "    width,height,layer = frame.shape\n",
     "    \n",
     "    # Our operations on the frame come here\n",
@@ -158,20 +242,22 @@
     "            print(\"sound play\")\n",
     "            winsound.Beep(frequency, duration)\n",
     "            \n",
-    "        if len(TRACKER)==24:\n",
+    "        if len(TRACKER)==10:\n",
     "            total_sum = sum(TRACKER)\n",
-    "            avg = total_sum/24\n",
+    "            avg = total_sum/10\n",
     "            TRACKER.clear()\n",
     "            if avg > 0.5:\n",
     "                label = \"undrowsiness\"\n",
     "            else:\n",
     "                label = \"drowsiness\"\n",
     "                \n",
+    "            \n",
+    "                \n",
     "                \n",
     "        print(label_index,pre)\n",
     "\n",
     "    cv2.putText(frame,label, (0,100), cv2.FONT_HERSHEY_SIMPLEX, 3, (0,0,255))\n",
-    "    frame = cv2.resize(frame,(800,600))\n",
+    "#     frame = cv2.resize(frame,(800,600))\n",
     "    cv2.imshow('frame',frame)\n",
     "    count+=1\n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
