--- a/loadmodel.ipynb
+++ b/loadmodel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -28,13 +28,13 @@
    ],
    "source": [
     "labels = [\"drowsiness\" , \"undrowsiness\"]\n",
-    "model = tf.keras.models.load_model('model_30Nov_15epoch.h5')\n",
+    "model = tf.keras.models.load_model('models/model_30Nov_15epoch.h5')\n",
     "print(model.input.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -210,24 +210,7 @@
       "1 [[1.]]\n",
       "1 [[1.]]\n",
       "1 [[1.]]\n",
-      "0 [[4.46855e-35]]\n",
-      "1 [[1.]]\n",
-      "1 [[1.]]\n",
-      "1 [[1.]]\n",
-      "1 [[1.]]\n",
-      "1 [[1.]]\n",
-      "1 [[1.]]\n",
-      "1 [[1.]]\n",
-      "1 [[1.]]\n",
-      "1 [[1.]]\n",
-      "1 [[1.]]\n",
-      "1 [[1.]]\n",
-      "1 [[1.]]\n",
-      "1 [[1.]]\n",
-      "1 [[1.]]\n",
-      "1 [[1.]]\n",
-      "1 [[1.]]\n",
-      "1 [[1.]]\n",
+      "0 [[4.4685502e-35]]\n",
       "1 [[1.]]\n",
       "1 [[1.]]\n",
       "1 [[1.]]\n",
@@ -274,10 +257,19 @@
     "frequency = 2200\n",
     "duration = 2000  \n",
     "# winsound.Beep(frequency, duration)\n",
-    "cap = cv2.VideoCapture(\"test/video/faizan_undrowsiness.mp4\")\n",
+    "cap = cv2.VideoCapture(\"C:/Users/se7en/Desktop/major_project/test/video/faizan_undrowsiness.mp4\")\n",
+    "\n",
+    "frame_width = int(cap.get(3))\n",
+    "frame_height = int(cap.get(4))\n",
+    "   \n",
+    "size = (frame_width, frame_height)\n",
+    "result = cv2.VideoWriter('faizan.avi', \n",
+    "                         cv2.VideoWriter_fourcc(*'MJPG'),\n",
+    "                         10, size)  \n",
     "label = \"Testing\"\n",
     "TRACKER = []\n",
     "size = 150\n",
+    "count = 0\n",
     "labels = [\"drowsiness\" , \"undrowsiness\"]\n",
     "face_cascade = cv2.CascadeClassifier(\"haarcascade/haarcascade_frontalface_alt.xml\")\n",
     "while(True):\n",
@@ -327,9 +319,10 @@
     "                \n",
     "                \n",
     "        print(label_index,pre)\n",
-    "\n",
-    "    cv2.putText(frame,label, (0,100), cv2.FONT_HERSHEY_SIMPLEX, 3, (0,0,255))\n",
+    "    thickness = 1\n",
+    "    cv2.putText(frame,label, (0,height//2), cv2.FONT_HERSHEY_SIMPLEX, 1, (0,0,255),thickness, cv2.LINE_AA)\n",
     "#     frame = cv2.resize(frame,(800,600))\n",
+    "    result.write(frame)\n",
     "    cv2.imshow('frame',frame)\n",
     "    count+=1\n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
@@ -337,6 +330,7 @@
     "\n",
     "# When everything done, release the capture\n",
     "cap.release()\n",
+    "result.release()\n",
     "cv2.destroyAllWindows()\n"
    ]
   },
